# gemor-kernel

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
development/docker/: dev-env.py  requirements.txt
development/docker/image/: Dockerfile
development/docker/image/build-scripts/: build-cross-compiler.sh
development/scripts/: build-docker-image.sh  enter-dev-env.sh
src/: Makefile  boot.s  bootstrap.sh  grub.cfg  kernel.c  kernel.d  logger.rs  main.rs  vga_printer.rs
