[package]
name = "gemor-kernel"
version = "0.1.0"
authors = ["Jakub Lecki <lec.jakub@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[workspace]
members = [
    "simple_boot",
]

[dependencies.bootloader]
version = "0.10.10"
