[package]
name = "gemor-kernel"
version = "0.1.0"
authors = ["Jakub Lecki <lec.jakub@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[workspace]
members = [
    "simple_boot",
]

[dependencies]
conquer-once = { version = "0.2.1", default-features = false }
spinning_top = { version = "0.2.1" }
log = { version = "0.4.8"  }
rgb = { version = "0.8.31" }

[dependencies.bootloader]
version = "0.10.10"

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

